mycv/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cv
  namespace: cv
spec:
  selector:
    matchLabels:
      name: cv
  template:
    metadata:
      labels:
        name: cv
    spec:
      containers:
      - name: cv
        image: ghcr.io/tom333/cv-static:latest
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot
  namespace: cv
spec:
  selector:
    matchLabels:
      name: chatbot
  template:
    metadata:
      labels:
        name: chatbot
    spec:
      containers:
      - name: chatbot
        image: ghcr.io/tom333/cv-chatbot:latest
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamic
  namespace: cv
spec:
  selector:
    matchLabels:
      name: dynamic
  template:
    metadata:
      labels:
        name: dynamic
    spec:
      containers:
      - name: dynamic
        image: ghcr.io/tom333/dynamic-cv:latest
        ports:
        - name: http
          containerPort: 8501
          protocol: TCP
