mycv/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: cv
  namespace: cv
  labels:
    name: cv
spec:
  type: ClusterIP
  selector:
    name: cv
  ports:
  - port: 80
    name: http
    targetPort: 80
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: chatbot
  namespace: cv
  labels:
    name: chatbot
spec:
  type: ClusterIP
  selector:
    name: chatbot
  ports:
  - port: 8000
    name: http
    targetPort: 8000
    protocol: TCP
