mycv/templates/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: cv
  namespace: cv
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: cv.tgu.ovh
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: cv
              port:
                number: 80

  tls:
    - secretName: cv-tls
      hosts:
        - cv.tgu.ovh
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: chatbot
  namespace: cv
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: chatbot.tgu.ovh
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: chatbot
              port:
                number: 8000

  tls:
    - secretName: chatbot-tls
      hosts:
        - chatbot.tgu.ovh
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: dynamic
  namespace: cv
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: dynamic.tgu.ovh
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: chatbot
              port:
                number: 8051

  tls:
    - secretName: dynamic-tls
      hosts:
        - dynamic.tgu.ovh
